--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "harfbuzz"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Krzysztof Mędrzycki <aiwenari@gmail.com>"]
 edition = "2018"
 links = "harfbuzz"
@@ -10,8 +10,8 @@ default = ["freetype"]
 freetype = ["freetype-rs"]
 
 [dependencies]
-bitflags = "1.0.4"
-freetype-rs = { version = "0.19.0", optional = true }
+bitflags = "2.0"
+freetype-rs = { version = ">= 0.19, < 0.33", optional = true }
 
 [dependencies.cffi]
 version = "0.1.0"
@@ -19,4 +19,4 @@ git = "https://github.com/aiwenar/cffi.git"
 
 [build-dependencies]
 pkg-config = "0.3.14"
-semver = "0.9.0"
+semver = "1.0"
